--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ src\assets\scss\app.min.css
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/assets/scss/app.min.css
+src/assets/scss/app.min.css.map
